--- a/notes/9_5_19.md
+++ b/notes/9_5_19.md
@@ -2,9 +2,38 @@
 
 |Macro|Micro|
 |------|----|
-Utilitarianism or Consequentialism | 
+Utilitarianism or Consequentialism | ?|
 
+
+#### Utilitarianism
 
 Utilitarian benfits:
 * impartial
 * Seems to be measurable, objective
+* Quantiative Hedanism, ways to measure different pleasures (Jeremy Something)
+* * Duration
+* John Stuart Mill
+* * qualitaive utilitariansim
+* * * creativity etc
+
+Overall Good
+Veers toward ethical relativism 
+
+
+moral machine site 
+
+Stuart Russel, wrote many initial AI books, tries to replace Asamovs 3 laws of robotics
+
+Assamov's three laws:
+* Dont hurt them, allow them to come to harm
+* Robot obeys human unless contradicts first
+* Protect own existance unless contradicting the first & second
+
+Human compatible AI
+* AI is supposed to maximize human values, whatever the human would prefer 
+
+
+
+
+
+
